cmake_minimum_required(VERSION 3.20)

# Set project information
project(
  Chapter_1
  VERSION 1.0
  DESCRIPTION "An Overview of C++"
  LANGUAGES CXX)

# Add subdirectories with examples
add_subdirectory(1.1_HelloWorld)
add_subdirectory(1.3_PowersOfTwo)
add_subdirectory(1.4_AddThreeNumbers)
add_subdirectory(1.7_AddIntegerList)
