cmake_minimum_required(VERSION 3.20)

# Set project information
project(
  Chapter_2
  VERSION 1.0
  DESCRIPTION "Functions and Libraries"
  LANGUAGES CXX)

# Add subdirectories with examples
add_subdirectory(2.4_Combinations)
add_subdirectory(2.5_Quadratic)
add_subdirectory(2.8_RandTest)
add_subdirectory(2.8_Craps)
add_subdirectory(2.9_GraphicExample)
