cmake_minimum_required(VERSION 3.20)

# Set project information
project(
  Chapter_7
  VERSION 1.0
  DESCRIPTION "Introduction to Recursion"
  LANGUAGES CXX)

# Add subdirectories with examples
add_subdirectory(7.2_Fact)
add_subdirectory(7.3_Fib)
add_subdirectory(7.3_Fib2)
add_subdirectory(7.4_Palindrome)
add_subdirectory(7.4_Palindrome2)
add_subdirectory(7.5_BinarySearch)
add_subdirectory(7.6_OddEven)
