cmake_minimum_required(VERSION 3.20)

# Set project information
project(
  Chapter_5
  VERSION 1.0
  DESCRIPTION "Collections"
  LANGUAGES CXX)

# Add subdirectories with examples
add_subdirectory(5.1_ReverseFile)
add_subdirectory(5.1_LetterFrequency)
add_subdirectory(5.2_RPNCalculator)
add_subdirectory(5.3_CheckoutLine)
add_subdirectory(5.4_AirportCodes)
add_subdirectory(5.6_TwoLetterWords)
add_subdirectory(5.6_PigEnglish)
add_subdirectory(5.6_WordFrequency)
